vlib/v/checker/tests/array_insert_type_mismatch_a.out
vlib/v/checker/tests/array_insert_type_mismatch_a.vv:3:14: error: type mismatch, should use `int`
    1 | fn main() {
    2 |     mut a := [1, 2]
    3 |     a.insert(1, 2.3)
      |                 ~~~
    4 |     println(a)
    5 | }
