vlib/v/checker/tests/array_insert_type_mismatch_a.vv
fn main() {
	mut a := [1, 2]
	a.insert(1, 2.3)
	println(a)
}
